NEXTEUROPA-3455 js fix for filters on IE8
Former-commit-id: 9f67e083a78d2171855b2af70a235a52e4f21dce

--- a/project/themes/europa/sass/base/_checkbox.scss
+++ b/project/themes/europa/sass/base/_checkbox.scss
@@ -51,7 +51,7 @@ Styleguide form.checkbox
         height: $form-checkbox-icon-size;
         top: 0.8em;
         left: 1em;
-        background: url(../images/svg/checkbox-unchecked.svg) no-repeat;
+        background: url('../images/svg/checkbox-unchecked.svg') no-repeat;
         background-size: auto $form-checkbox-icon-size;
       }
     }
@@ -62,7 +62,7 @@ Styleguide form.checkbox
       background-color: $form-checkbox-background-color-checked;
 
       &:before {
-        background-image: url(../images/svg/checkbox-checked.svg);
+        background-image: url('../images/svg/checkbox-checked.svg');
       }
     }
 
@@ -87,7 +87,7 @@ Styleguide form.checkbox
   .checkbox {
     input[type="checkbox"] {
       &:before {
-        background-image: url(../images/png/checkbox-radio.png) !important;
+        background-image: url('../images/png/checkbox-radio.png') !important;
       }
 
       &:checked+label {
