--- a/project/themes/europa/sass/base/_radio.scss
+++ b/project/themes/europa/sass/base/_radio.scss
@@ -30,7 +30,7 @@ Styleguide form.radio
   input {
     margin: 1px 0 0 13px;
   }
-  
+
   // Radio
   input[type="radio"] {
     height: $form-control-height;
@@ -51,7 +51,7 @@ Styleguide form.radio
         height: $form-checkbox-icon-size;
         top: 0.8em;
         left: 1em;
-        background: url(../images/svg/radio-unchecked.svg) no-repeat;
+        background: url('../images/svg/radio-unchecked.svg') no-repeat;
         background-size: auto $form-checkbox-icon-size;
       }
     }
@@ -62,7 +62,7 @@ Styleguide form.radio
       background-color: $form-checkbox-background-color-checked;
 
       &:before {
-        background-image: url(../images/svg/radio-checked.svg);
+        background-image: url('../images/svg/radio-checked.svg');
       }
     }
 
@@ -86,7 +86,7 @@ Styleguide form.radio
   .checkbox {
     input[type="checkbox"] {
       &:before {
-        background-image: url(../images/png/checkbox-radio.png) !important;
+        background-image: url('../images/png/checkbox-radio.png') !important;
       }
 
       // Checked state.
